--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
+    <script src="https://kit.fontawesome.com/6ae767b4f2.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header">
@@ -28,8 +29,8 @@
                 <h3 class="b-greeting">Hi, I  am</h3>
                 <h1 class="b-heading">Mary Hardy</h1>
                 <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="btn-primary">Download CV</button>
-                <button class="btn-primary">Contact</button>
+                <button class="btn-primary"> <i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="btn-primary"> <i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <img class="dp" src="images/hardy.png" alt="">
         </div>
@@ -139,7 +140,7 @@
                 </div>
             </div>
             <div class="download-cv">
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"> <i class="fa-solid fa-download"></i> Download CV</button>
             </div>
         </section>
     </main>
